--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             --white: #FFFFFF;
             --black: #000000;
             --dark: #232830;
-            --very-light-pink: #C7C7C7;
+            --very-light-green: #aec964;
             --text-input-field: #d6dacb;
             --hospital-green: #B9F608;
             --sm: 14px;
