--- a/login.html
+++ b/login.html
@@ -154,7 +154,7 @@
             <img src="./assets/logo.svg" alt="logo" class="logo">
             
 
-            <form action="/index.html" class="form">
+            <form action="./index.html" class="form">
                 <label for="email" class="label">Email Address</label>
                 <input type="email" id="password" placeholder="user@gmail.com" class="input-password">
                 <label for="password" class="label">Password</label>
