--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                
             </div>
             <div class="product-car">
-                <img src="/photos/1.jpg" alt="">
+                <img src="./photos/1.jpg" alt="">
                 <div class="info">
                     <div>
                         <p>Venom</p>
