--- a/singUp.html
+++ b/singUp.html
@@ -146,7 +146,7 @@
             <h1 class="title">Register</h1>
             
 
-            <form action="/index.html" class="form">
+            <form action="./index.html" class="form">
                 <label for="name" class="label">Name</label>
                 <input type="email" id="password" placeholder="User Name" class="input-password">
                 <label for="email" class="label">Email Address</label>
